--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -1,3 +1,42 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+.divider {
+	display: flex;
+	flex-direction: row;
+	align-items: center;
+	align-self: stretch;
+	margin-top: 1rem;
+	margin-bottom: 1rem;
+	height: 1rem;
+	white-space: nowrap
+}
+
+.divider:after,.divider:before {
+	content: "";
+	flex-grow: 1;
+	height: .125rem;
+	width: 100%
+}
+
+/* width */
+::-webkit-scrollbar {
+  width: 4px;
+}
+
+/* Track */
+::-webkit-scrollbar-track {
+  border-radius: 10px;
+}
+ 
+/* Handle */
+::-webkit-scrollbar-thumb {
+  background: #BDBDBD; 
+  border-radius: 10px;
+}
+
+/* Handle on hover */
+::-webkit-scrollbar-thumb:hover {
+  background: #adadad; 
+}
